# multi-agent-rag

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: router.py  specialized_agents.py  state.py
airflow/: airflow.cfg  airflow.db-shm  airflow.db-wal  simple_auth_manager_passwords.json.generated
airflow/dags/: travel_etl_dag.py
data_pipeline/processors/: bronze_ingestion.py  db_setup.py  scrape_destinations.py  silver_transform.py
graph/: graph.py
scripts/: demo_agents.py  demo_booking.py
tests/: test_tools.py
tests/evaluation/: evaluate.py  test_cases.py
tests/evaluation/reports/: eval_20260612_144253.json  eval_20260612_144404.json  eval_20260612_144817.json  eval_20260612_144826.json  eval_20260613_035926.json  eval_20260613_040956.json  eval_20260613_041204.json  eval_20260613_041330.json  eval_20260613_103345.json  eval_20260613_103459.json  eval_20260613_103658.json  eval_20260613_103953.json
tools/: base.py  safe_tools.py  sensitive_tools.py
vectorizer/app/: embedder.py
